--- a/EN_FR_50K_new_ Embeddings.ipynb
+++ b/EN_FR_50K_new_ Embeddings.ipynb
@@ -426,7 +426,7 @@
    "source": [
     "with open('/home/jiayi/Downloads/EN_FR_50K/EN_FR_50K_new/ent_links') as file:\n",
     "    en_to_fr_ents_50k_new = file.read().strip().split('\\n')\n",
-    "en_to_fr_ents_50k_new = dict([line.split('\\t') for line in en_to_fr_ents_v1])\n",
+    "en_to_fr_ents_50k_new = dict([line.split('\\t') for line in en_to_fr_ents_50K_new])\n",
     "with open('/home/jiayi/Downloads/EN_FR_50K/EN_FR_50K_new/721_5fold/1/test_links') as file:\n",
     "    test_set = file.read().strip().split('\\n')\n",
     "test_set = [line.split('\\t')[0] for line in test_set]\n",
@@ -462,8 +462,8 @@
     }
    ],
    "source": [
-    "_, _, _, _, _, _, S_eval, T_eval, R = get_source_and_target_matrices(en_to_fr_ents_v1,\\\n",
-    "                                                En_shallom_embs_v1, Fr_shallom_embs_v1, given_test_set=test_set, emb_dim=100, test_size=0.1)"
+    "_, _, _, _, _, _, S_eval, T_eval, R = get_source_and_target_matrices(en_to_fr_ents_50K_new,\\\n",
+    "                                                En_shallom_embs_50K_new, Fr_shallom_embs_50K_new, given_test_set=test_set, emb_dim=100, test_size=0.1)"
    ]
   },
   {
