evaluation dataset splits

--- a/Evaluation_link_prediction.ipynb
+++ b/Evaluation_link_prediction.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "personal-shade",
+   "id": "apparent-rotation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "closed-freight",
+   "id": "attractive-caribbean",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "drawn-mason",
+   "id": "scheduled-skating",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "knowing-composer",
+   "id": "clear-index",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "floating-great",
+   "id": "appropriate-dinner",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "opponent-malawi",
+   "id": "distinct-election",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "upset-missouri",
+   "id": "smaller-rolling",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "pleased-literacy",
+   "id": "furnished-values",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "square-glenn",
+   "id": "hungry-charleston",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "metropolitan-telling",
+   "id": "continuous-ownership",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "appointed-category",
+   "id": "humanitarian-organ",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "agricultural-chrome",
+   "id": "proof-warrior",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "mathematical-mixture",
+   "id": "lesbian-lincoln",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "driving-protest",
+   "id": "opponent-madrid",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "bizarre-cambridge",
+   "id": "governmental-stress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "equivalent-mirror",
+   "id": "juvenile-dominican",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "aging-publisher",
+   "id": "preliminary-amazon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "jewish-suite",
+   "id": "central-tobacco",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "reliable-thriller",
+   "id": "animal-ebony",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "eleven-store",
+   "id": "operating-plant",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "anticipated-conviction",
+   "id": "different-ballot",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,71 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "involved-association",
+   "id": "lyric-immunology",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "fluid-graphic",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sameAs(kg, split_type=\"train\"):\n",
+    "    with open(f\"Evaluation/splits/{kg}/{split_type}.txt\") as file:\n",
+    "        data = file.readlines()\n",
+    "    sameAs_ents = set()\n",
+    "    for line in data:\n",
+    "        e1, r, e2 = line.strip(\"\\n\").strip(\" .\").split(\"\\t\")\n",
+    "        if \"/entity/\" in e1:\n",
+    "            sameAs_ents.add(e1)\n",
+    "        if \"/entity/\" in e2:\n",
+    "            sameAs_ents.add(e2)\n",
+    "    print(\"Number of entities with sameAs links:\", len(sameAs_ents))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "involved-makeup",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of entities with sameAs links: 22102\n"
+     ]
+    }
+   ],
+   "source": [
+    "sameAs(\"DBpedia\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "adjusted-ceiling",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of entities with sameAs links: 10471\n"
+     ]
+    }
+   ],
+   "source": [
+    "sameAs(\"DBpedia\", \"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "saving-nightlife",
    "metadata": {},
    "outputs": [],
    "source": []
