describe code and update documentation

--- a/merge.ipynb
+++ b/merge.ipynb
@@ -1,13 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "featured-customer",
+   "metadata": {},
+   "source": [
+    "We downloaded and saved [DBpedia](https://www.dbpedia.org/blog/dbpedia-snapshot-2022-09-release/) in parquet compression format (dbpedia_09_2022.parquet). We also downloaded [Wikidata](https://dumps.wikimedia.org/wikidatawiki/) as data.txt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c9820d8-0806-484a-a72b-7448c606b748",
+   "id": "stone-disability",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#covert data from parquet\n",
+    "# convert data from parquet to txt\n",
     "from fastparquet import ParquetFile\n",
     "filename = \"dbpedia_09_2022.parquet\"\n",
     "pf = ParquetFile(filename)\n",
@@ -19,23 +27,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd0dd0a2-eb63-4e6c-a6d1-bb7c4144e2f0",
+   "id": "expressed-technical",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#write DB file with correctly format\n",
+    "file_rel_DB ='dbpedia_09_2022.txt' # dbpedia initial file\n",
+    "file_rel_write_sameas = 'sameas.txt' # file to write and store sameAs links\n",
+    "file_rel_DB_without_sameas ='dbpedia_09_2022_clean.txt' # to store well-formatted triples in dbpedia\n",
     "\n",
-    "file_rel_DB ='dbpedia_09_2022.txt'\n",
-    "file_rel_write_sameas='sameas.txt'\n",
-    "file_rel_DB_without_sameas_error ='dbpedia_09_2022_version_merge.txt'\n",
-    "file_rel_DB_without_error ='dbpedia_09_2022_version.txt'\n",
-    "\n",
-    "filerel_write_sameas = open(file_rel_write_sameas, 'w', encoding='utf-8')\n",
-    "filerel_DB_without_error = open(file_rel_DB_without_error ,'w', encoding='utf-8')\n",
-    "filerel_DB_without_sameas_error = open(file_rel_DB_without_sameas_error, 'w', encoding='utf-8')\n",
+    "dbpedia_sameas_file = open(file_rel_write_sameas, 'w', encoding='utf-8')\n",
+    "dbpedia_clean_file = open(file_rel_DB_without_sameas, 'w', encoding='utf-8')\n",
     "\n",
     "def read_triple_dbp_raw(file_path):\n",
-    "    num=0\n",
     "    num1=0\n",
     "    num2=0\n",
     "    outputsame=''\n",
@@ -50,215 +53,166 @@
     "            s = line[0].lstrip('<').rstrip('>')\n",
     "            p = line[1].lstrip('<').rstrip('>')\n",
     "            o = line[2].lstrip('<').rstrip('>')\n",
-    "            #write in to version1\n",
-    "            num=num+1\n",
-    "            outputwithouterror ='<'+ s +'>'+'\\t'+'<'+ p +'>'+'\\t'+'<'+ o +'> .''\\n'\n",
-    "            filerel_DB_without_error.write(outputwithouterror)\n",
     "            if 'http://www.w3.org/2002/07/owl#sameAs' in p  and 'http://www.wikidata.org/entity'  in o:\n",
     "                num1=num1+1\n",
-    "                outputsame='<'+ s +'>'+'\\t'+'<'+ p +'>'+'\\t'+'<'+ o +'> .''\\n'\n",
-    "                filerel_write_sameas.write(outputsame)\n",
+    "                outputsame='<'+ s +'>'+'\\t'+'<'+ p +'>'+'\\t'+'<'+ o +'>\\t.\\n'\n",
+    "                dbpedia_sameas_file.write(outputsame)\n",
     "            if 'http://www.w3.org/2002/07/owl#sameAs' not in p:\n",
     "                num2=num2+1\n",
-    "                outputwithouterrorsameas='<'+ s +'>'+'\\t'+'<'+ p +'>'+'\\t'+'<'+ o +'> .''\\n'\n",
-    "                filerel_DB_without_sameas_error.write(outputwithouterrorsameas)\n",
+    "                outputwithouterrorsameas='<'+ s +'>'+'\\t'+'<'+ p +'>'+'\\t'+'<'+ o +'>\\t.\\n'\n",
+    "                dbpedia_clean_file.write(outputwithouterrorsameas)\n",
     "                \n",
-    "        print(num)\n",
     "        print(num1)\n",
     "        print(num2)\n",
     "                \n",
     "\n",
     "            \n",
-    "read_triple_dbp_raw(file_rel_DB)\n",
-    "\n",
-    "\n",
-    "#758227396 without error\n",
-    "#33860047 same \n",
-    "#724367349\n",
-    "#724367311\n",
-    "#616564612 witout same and error\n",
-    "#616564604\n"
+    "read_triple_dbp_raw(file_rel_DB)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4300aab5-52c3-41b1-aa52-5c8d82cc02a5",
+   "id": "annual-empire",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#delete 1st line from dbpedia_09_2022_version.txt and dbpedia_09_2022_version_merge.txt\n",
-    "#because the 1st was from dbpedia_09_2022.txt，were the column names of the table <subjetc> <relation> <object>\n",
-    "sed -i '1d' dbpedia_09_2022_version_merge.txt\n",
-    "\n",
-    "sed -i '1d' dbpedia_09_2022_version.txt"
+    "#delete 1st line in dbpedia_09_2022_clean.txt because it contains column names, i.e., <subjetc> <relation> <object>\n",
+    "sed -i '1d' dbpedia_09_2022_clean.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "prescription-workstation",
+   "metadata": {},
+   "source": [
+    "Define functions to merge DBpedia and Wikidata "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4c04043-fda0-4dfb-ae67-e50e06ecb6e1",
+   "id": "respiratory-moral",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mergeentities\n",
-    "file_rel_in_WIKI= 'data.txt'\n",
-    "file_rel_sameAS= 'sameas.txt'\n",
-    "file_rel_in_DB= 'dbpedia_09_2022_version_merge.txt'\n",
-    "filewrite = open('mergeentities.txt', 'a', encoding='utf-8')\n",
+    "file_rel_in_WIKI = 'data.txt' # relation triples in wikidata\n",
+    "file_rel_in_DB = 'dbpedia_09_2022_clean.txt' # well formatted triples in dbpedia\n",
+    "sameas_links = 'sameas.txt' # sameAs links\n",
+    "filewrite = open('mergeentities.txt', 'a', encoding='utf-8') # file to store the fusion of dbpedia and wikidata triples via sameAs links; we replace matching\n",
+    "# entity names by their corresponding names in dbpedia\n",
     "\n",
-    "\n",
-    "def read_DBandWIKI(file_path):\n",
+    "# function to read sameAs links and build a python dictionary\n",
+    "def read_sameAs_and_build_dict(file_path):\n",
     "    dictwiki=dict()\n",
-    "  #(DB,wiki)\n",
-    "    num=0\n",
+    "  # keys will be entity labels in wikidata and values their corresponding names in dbpedia\n",
     "    with open(file_path, 'r', encoding='utf-8') as file:\n",
     "        for line in file:\n",
-    "            line = line.strip(' .\\n').split()\n",
+    "            line = line.strip('\\t.\\n').split()\n",
     "            if len(line) != 3:\n",
     "                \n",
     "                continue\n",
-    "            num=num+1\n",
     "            s = line[0].lstrip('<').rstrip('>') #db\n",
     "            p = line[1].lstrip('<').rstrip('>')\n",
     "            o = line[2].lstrip('<').rstrip('>')#wiki\n",
-    "            dictwiki[s]=o\n",
-    "            #dictwikibackforward[o]=s    \n",
-    "            \n",
-    "            \"\"\"\n",
-    "            keys = dictwiki.keys()\n",
-    "            if s not in keys: #(DB,wiki)\n",
-    "            \"\"\"\n",
-    "                #listtriplebackforward=set()\n",
-    "               \n",
-    "                #dictwiki[s]=o\n",
+    "            dictwiki[o]=s\n",
     "        return dictwiki\n",
     "\n",
-    "def read_WIKIandDB(file_path):\n",
-    "    #(Wiki,db)\n",
-    "    dictwikibackforward=dict()\n",
-    "    num=0\n",
-    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
-    "        for line in file:\n",
-    "            line = line.strip(' .\\n').split()\n",
-    "            if len(line) != 3:\n",
-    "                continue\n",
-    "            num=num+1\n",
-    "            s = line[0].lstrip('<').rstrip('>') #DB\n",
-    "            p = line[1].lstrip('<').rstrip('>')\n",
-    "            o = line[2].lstrip('<').rstrip('>') #wiki\n",
-    "            \"\"\"\n",
-    "            keysbackforward = dictwikibackforward.keys()\n",
-    "            if o not in keysbackforward: #(wiki,db)\n",
-    "                #listtriplebackforward=set()\n",
-    "                \"\"\"\n",
-    "            dictwikibackforward[o]=s    \n",
-    "            \n",
-    "        #(wiki,db)\n",
-    "    return dictwikibackforward    \n",
     "\n",
-    "#replace\n",
-    "def replace_entity_in_DB(file_path,dictbackforward):\n",
+    "def replace_wikidata_labels_by_corr_dbpedia_names(file_path, mapping):\n",
+    "    \"\"\" Replace matching entity names by their corresponding names in dbpedia \"\"\"\n",
     "#(wiki,db)\n",
-    "    numoindata=0\n",
-    "    numberout=0\n",
-    "    output=''\n",
+    "    output = ''\n",
     "    with open(file_path, 'r', encoding='utf-8') as file:\n",
     "        for line in file:\n",
-    "            numoindata=numoindata+1\n",
-    "            line = line.strip(' .\\n').split()\n",
+    "            line = line.strip('\\t.\\n').split()\n",
     "            if len(line) != 3:\n",
     "                continue\n",
     "            s = line[0].lstrip('<').rstrip('>')# wiki\n",
     "            p = line[1].lstrip('<').rstrip('>')\n",
-    "            o = line[2].lstrip('<').rstrip('>') #wiki\n",
-    "            \n",
-    "                #(wiki,db)\n",
-    "\n",
-    "            rl=str(p).replace(\"http://www.wikidata.org/\",\"http://embedding.cc/\")\n",
-    "                \n",
-    "                #replacevaluehead=set()\n",
-    "               \n",
-    "            head=str(s).replace(\"http://www.wikidata.org/\",\"http://embedding.cc/\")\n",
-    "               \n",
-    "               \n",
-    "                #double check if replacevalue in dicforward keys\n",
-    "                \n",
-    "               # print(\"the tail entity should be replaced is \"+o)\n",
-    "                \n",
-    "                \n",
-    "            tail=str(o).replace(\"http://www.wikidata.org/\",\"http://embedding.cc/\")\n",
-    "               \n",
-    "            output ='<'+ head +'>'+'\\t'+'<'+ rl +'>'+'\\t'+'<'+ tail +'> .''\\n'\n",
-    "            numberout=numberout+1\n",
-    "               \n",
-    "            filewrite.write(output)\n",
-    "        print(\"the match number is\" + str(numberout))\n",
-    "\n",
-    "def replace_entity_into_WIKI(file_path,dictforward):\n",
-    "#(DB,wiki)\n",
-    "#\n",
-    "    numoindata=0 \n",
-    "    numberout=0\n",
-    "    output=''\n",
-    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
-    "        for line in file:\n",
-    "            line = line.strip(' .\\n').split()\n",
-    "            if len(line) != 3:\n",
-    "                continue\n",
-    "            s = line[0].lstrip('<').rstrip('>')# db\n",
-    "            p = line[1].lstrip('<').rstrip('>')\n",
-    "            o = line[2].lstrip('<').rstrip('>') # db\n",
-    "            numoindata=numoindata+1\n",
-    "            uri=p.split('/')\n",
-    "            newuri=p.replace(uri[2],\"embedding.cc\")\n",
-    "           \n",
-    "      \n",
-    "            \n",
-    "            if s in dictforward.keys() or o in dictforward.keys():\n",
-    "                \n",
-    "                replacevaluehead=dictforward.get(s) #wik\n",
-    "                if replacevaluehead is None:\n",
-    "                    head=str(s).replace(\"http://dbpedia.org/\",\"http://embedding.cc/\")\n",
+    "            o = line[2].lstrip('<').rstrip('>')# wiki\n",
+    "            if s in mapping.keys() or o in mapping.keys():\n",
+    "                renamesubject=mapping.get(s) #wik\n",
+    "                if renamesubject is None:\n",
+    "                    subject=str(s).replace(\"http://www.wikidata.org/\",\"http://embedding.cc/\")\n",
     "                else:\n",
-    "                    head=str(replacevaluehead).replace(\"http://www.wikidata.org/\",\"http://embedding.cc/\")\n",
-    "              \n",
-    "                replacevaluetail=dictforward.get(o)\n",
-    "                if replacevaluetail is None:\n",
-    "                    tail=str(o).replace(\"http://dbpedia.org/\",\"http://embedding.cc/\")\n",
+    "                    subject=str(renamesubject).replace(\"http://dbpedia.org/\",\"http://embedding.cc/\")\n",
+    "                renameobjectt=mapping.get(o)\n",
+    "                if renameobjectt is None:\n",
+    "                    objectt=str(o).replace(\"http://www.wikidata.org/\",\"http://embedding.cc/\")\n",
     "                else:\n",
-    "\n",
-    "                    tail=str(replacevaluetail).replace(\"http://www.wikidata.org/\",\"http://embedding.cc/\")\n",
-    "            #if s in dictforward.keys() or o in dictforward.keys():\n",
+    "                    objectt=str(renameobjectt).replace(\"http://dbpedia.org/\",\"http://embedding.cc/\")\n",
     "            else:\n",
-    "                head=str(s).replace(\"http://dbpedia.org/\",\"http://embedding.cc/\")\n",
-    "                tail=str(o).replace(\"http://dbpedia.org/\",\"http://embedding.cc/\")\n",
-    "            output ='<'+ head +'>'+'\\t'+'<'+ newuri +'>'+'\\t'+'<'+ tail +'> .''\\n'\n",
-    "            numberout=numberout+1\n",
-    "            filewrite.write(output)\n",
-    "        print(\"the raw number in  DB is\" + str(numoindata))\n",
-    "        print(\"the new number in  DB is\" + str(numberout))\n",
-    "        \n",
-    "    \n",
-    "                #str(output).replace('http://dbpedia.org/','http://embedding.cc/')\n",
-    "                #double check if replacevalue in dicforward key\n",
-    "\n",
-    "#DBreaderbackforward=read_DB_in_map2(file_rel_DB)\n",
-    "DBreaderforward=read_DBandWIKI(file_rel_sameAS)\n",
-    "DBreaderbackforward=read_WIKIandDB(file_rel_sameAS)\n",
-    "\n",
-    "#replace_entity_in_DB(file_rel_wiki,DBreaderbackforward)\n",
-    "replace_entity_in_DB(file_rel_in_WIKI,DBreaderbackforward) #(wiki,db)\n",
-    "replace_entity_into_WIKI(file_rel_in_DB,DBreaderforward)\n",
-    "filewrite.close()\n",
-    "\n",
-    "#read match from theb DB sameaas"
+    "                subject=str(s).replace(\"http://dbpedia.org/\",\"http://embedding.cc/\")\n",
+    "                objectt=str(o).replace(\"http://dbpedia.org/\",\"http://embedding.cc/\")\n",
+    "            output = '<'+ subject +'>'+'\\t'+'<'+ str(p) +'>'+'\\t'+'<'+ objectt +'>\\t.\\n'\n",
+    "            filewrite.write(output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "incident-debate",
+   "metadata": {},
+   "source": [
+    "First write Dbpedia triples into the merge file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "382c3d13-1d90-4f52-864e-e0c5e2826991",
+   "id": "average-tongue",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_write_dbpedia_triples_to_merge_kg(dbpedia_file):\n",
+    "    with open(dbpedia_file, 'r', encoding='utf-8') as file:\n",
+    "        for line in file:\n",
+    "            filewrite.write(line) # write into the merge file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "capable-estimate",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first write dbpedia triples into the merge file. wikidata triples will be added below using Algorithm 1 of our paper.\n",
+    "read_write_dbpedia_triples_to_merge_kg(file_rel_in_DB)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "phantom-evaluation",
+   "metadata": {},
+   "source": [
+    "Now build the mapping dictionary using sameAs links then add wikidata triples into the merge file using Algorithm 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "statutory-cattle",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wikidata_to_dbpedia = read_sameAs_and_build_dict(sameas_links) # sameAs links\n",
+    "replace_wikidata_labels_by_corr_dbpedia_names(file_rel_in_WIKI, wikidata_to_dbpedia) # add wikidata triples\n",
+    "filewrite.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "breathing-delaware",
+   "metadata": {},
+   "source": [
+    "Data statistics and average degree in KGs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "handy-immigration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,8 +221,7 @@
     "      with open(file_name, 'r', encoding='utf-8') as file:\n",
     "        num=0\n",
     "        for line in file:\n",
-    "           \n",
-    "            line = line.strip(' .\\n').split()\n",
+    "            line = line.strip('\\t.\\n').split()\n",
     "            if len(line) != 3:\n",
     "                continue\n",
     "            num=num+1\n",
@@ -279,11 +232,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56bdb9f6-4617-4e84-b85b-3d006a29d460",
+   "id": "raising-factor",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#degree\n",
+    "#compute the average degree\n",
     "from collections import defaultdict\n",
     "def degree(file_name):\n",
     "    kg_degree = defaultdict(lambda: 0)\n",
@@ -291,7 +244,7 @@
     "        #data = file.readlines()\n",
     "       # print(\"***Train*** Number of triples: \", len(data))\n",
     "     for triple in file:\n",
-    "            triple = triple.strip(' .\\n').split()\n",
+    "            triple = triple.strip('\\t.\\n').split()\n",
     "            e1 = triple[0].lstrip('<').rstrip('>')\n",
     "            r = triple[1].lstrip('<').rstrip('>')\n",
     "            e2 = triple[2].lstrip('<').rstrip('>')\n",
@@ -300,18 +253,14 @@
     "    return kg_degree\n",
     "\n",
     "import numpy as np\n",
-    "degrees = degree(\"mergeentities.txt\") ## Replace by KG file name here. In our case, you will do it for 3 KGs: mergeentities.txt, DBpedia.txt, Wikidata.txt\n",
-    "print(\"Avg. degree:\", np.array(list(degrees.values())).mean())\n",
-    "\n",
-    "#merge Avg. degree: 14.288348430923302\n",
-    "\n",
-    "#db Avg. degree: 10.403151794296798\n"
+    "degrees = degree(\"mergeentities.txt\") ## Replace by KG file name here. In our case, you will do it for 3 KGs: mergeentities.txt, dbpedia_09_2022_clean.txt, data.txt (wikidata kg)\n",
+    "print(\"Avg. degree:\", np.array(list(degrees.values())).mean())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fecc2fde-1474-4534-bbc0-af53921aad68",
+   "id": "offensive-boston",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +270,7 @@
     "    with open(file_name) as file:\n",
     "        #data = file.readlines()\n",
     "        for triple in file:\n",
-    "            triple = triple.strip(' .\\n').split()\n",
+    "            triple = triple.strip('\\t.\\n').split()\n",
     "           \n",
     "            e1 = triple[0].lstrip('<').rstrip('>')# db\n",
     "            r = triple[1].lstrip('<').rstrip('>')# db\n",
@@ -330,18 +279,16 @@
     "            E.update({e1, e2})\n",
     "            R.add(r)\n",
     "    print(f\"#Entities: {len(E)}, #Relations: {len(R)}\")\n",
-    "#kg_size('data.txt')\n",
-    "kg_size('mergeentities.txt')\n",
-    "##Entities: 145768777, #Relations: 13784\n",
-    "#Entities: 179759154, #Relations: 15219"
+    "kg_size('data.txt')\n",
+    "kg_size('mergeentities.txt')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python36",
+   "display_name": "cl",
    "language": "python",
-   "name": "python36"
+   "name": "cl"
   },
   "language_info": {
    "codemirror_mode": {
@@ -353,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
