run a few experiments

--- a/procrustes_alignment.ipynb
+++ b/procrustes_alignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "treated-snapshot",
+   "id": "common-spring",
    "metadata": {},
    "source": [
     "## OpenEA datasets. We consider RotatE and TransE embedding approaches"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "weighted-surprise",
+   "execution_count": 2,
+   "id": "elder-video",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "compliant-scroll",
+   "execution_count": 3,
+   "id": "outside-acrobat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,8 +112,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "direct-backing",
+   "execution_count": 4,
+   "id": "breathing-garbage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "antique-paintball",
+   "execution_count": 5,
+   "id": "trained-audience",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "several-cover",
+   "id": "common-rental",
    "metadata": {},
    "source": [
     "## Define functions to load embeddings"
@@ -207,8 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "silent-testament",
+   "execution_count": 6,
+   "id": "trying-garden",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,8 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "congressional-tuition",
+   "execution_count": 7,
+   "id": "collected-steal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,8 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "thrown-chorus",
+   "execution_count": 8,
+   "id": "subsequent-quick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,8 +273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "weighted-macedonia",
+   "execution_count": 19,
+   "id": "approved-journalist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,8 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "individual-improvement",
+   "execution_count": 20,
+   "id": "close-religion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,8 +293,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "registered-continent",
+   "execution_count": 21,
+   "id": "imposed-rouge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,8 +303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "capable-walter",
+   "execution_count": 22,
+   "id": "optimum-stanford",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "[2 rows x 50 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "southwest-homework",
+   "id": "appropriate-drive",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "dietary-publicity",
+   "id": "earned-disclosure",
    "metadata": {},
    "outputs": [
     {
@@ -575,28 +575,28 @@
      "text": [
       "\n",
       "Now computing R...\n",
-      "Scale S:  0.8313995502373988\n",
+      "Scale S:  0.8341125927861606\n",
       "\n",
-      "Completed after 0.07381749153137207 seconds\n",
-      "Alignment loss:  1119.3868638982024\n"
+      "Completed after 0.08717536926269531 seconds\n",
+      "Alignment loss:  3285.2662817510895\n"
      ]
     }
    ],
    "source": [
     "scale_S, scale_T, mean_S, mean_T, S, T, S_test, T_test, R = get_source_and_target_matrices(alignment,\\\n",
-    "                                                emb1, emb2, given_test_set=test_entities, emb_dim=50, rescale=False, test_size=0.1)"
+    "                                                emb1, emb2, given_test_set=None, emb_dim=50, rescale=False, test_size=0.1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "integrated-output",
+   "id": "national-bride",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10500, 50)"
+       "(1500, 50)"
       ]
      },
      "execution_count": 25,
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "designed-process",
+   "id": "universal-mambo",
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10500/10500 [00:00<00:00, 40472.76it/s]\n"
+      "100%|██████████| 1500/1500 [00:00<00:00, 109569.07it/s]"
      ]
     },
     {
@@ -645,7 +645,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10500/10500 [00:00<00:00, 47524.75it/s]"
+      "\n",
+      "100%|██████████| 1500/1500 [00:00<00:00, 103721.85it/s]"
      ]
     },
     {
@@ -653,7 +654,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Hits@5: 0.0004761904761904762, Hits@10: 0.0009047619047619047, Hits@50: 0.004095238095238095, MRR: 0.0009166437664379746\n"
+      "Hits@5: 0.0033333333333333335, Hits@10: 0.008, Hits@50: 0.039, MRR: 0.005619881159665557\n"
      ]
     },
     {
@@ -669,76 +670,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "joint-bolivia",
+   "cell_type": "markdown",
+   "id": "removed-indonesian",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "##################################################\n",
-      "Evaluation started...\n",
-      "##################################################\n",
-      "Fitting 1...\n",
-      "Predicting 1...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10500/10500 [00:00<00:00, 45068.43it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Fitting 2...\n",
-      "Predicting 2...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10500/10500 [00:00<00:00, 41691.30it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Hits@5: 0.9291904761904761, Hits@10: 0.9612857142857143, Hits@50: 0.9933809523809524, MRR: 0.8421233777307413\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "evaluate_alignment_knn(S_test, T_test, R, assume_known=True, hit_values=[5, 10, 50])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "confident-tanzania",
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "restricted-vocabulary",
+   "id": "black-surprise",
    "metadata": {},
    "source": [
     "## With RotatE embeddings"
@@ -747,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "spatial-indication",
+   "id": "adopted-karen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "catholic-disabled",
+   "id": "adequate-eugene",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "moving-testing",
+   "id": "centered-bridge",
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "negative-sheffield",
+   "id": "manual-benefit",
    "metadata": {},
    "outputs": [
     {
@@ -996,8 +935,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "antique-quick",
+   "execution_count": null,
+   "id": "talented-convention",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "introductory-pontiac",
+   "metadata": {},
+   "source": [
+    "## Another dataset: EN_FR_100K_V1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "smooth-sacrifice",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alignment = build_alignment_dict(\"EN_FR_100K_V1\")\n",
+    "test_entities = get_test_entities(\"EN_FR_100K_V1\", 1)\n",
+    "emb1, emb2 = get_embeddings(\"EN_FR_100K_V1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "representative-customer",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Now computing R...\n",
+      "Scale S:  0.5238434249154881\n",
+      "\n",
+      "Completed after 0.6418383121490479 seconds\n",
+      "Alignment loss:  17580.037182179432\n"
+     ]
+    }
+   ],
+   "source": [
+    "scale_S, scale_T, mean_S, mean_T, S, T, S_test, T_test, R = get_source_and_target_matrices(alignment,\\\n",
+    "                                                emb1, emb2, given_test_set=None, emb_dim=50, rescale=False, test_size=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "previous-spanking",
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1006,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10500/10500 [00:00<00:00, 42283.81it/s]\n"
+      "100%|██████████| 10000/10000 [00:00<00:00, 42731.78it/s]\n"
      ]
     },
     {
@@ -1031,7 +1022,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10500/10500 [00:00<00:00, 40095.19it/s]"
+      "100%|██████████| 10000/10000 [00:00<00:00, 44983.38it/s]"
      ]
     },
     {
@@ -1039,7 +1030,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Hits@5: 0.47419047619047616, Hits@10: 0.5266666666666666, Hits@50: 0.6577142857142857, MRR: 0.39811929092948023\n"
+      "Hits@5: 0.0007, Hits@10: 0.0010999999999999998, Hits@50: 0.0056, Hits@1000: 0.10805000000000001, MRR: 0.0010776550452930855\n"
      ]
     },
     {
@@ -1051,8 +1042,24 @@
     }
    ],
    "source": [
-    "evaluate_alignment_knn(S_test, T_test, R, assume_known=True, hit_values=[5, 10, 50])"
+    "evaluate_alignment_knn(S_test, T_test, R, assume_known=False, hit_values=[5, 10, 50, 1000])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aerial-mozambique",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "accepted-climate",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
